--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "client",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "node-sass": "^4.14.1",
+    "postprocessing": "^6.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-postprocessing": "^1.1.6",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
+    "react-three-fiber": "^4.2.20",
+    "three": "^0.119.1"
   },
   "scripts": {
     "start": "react-scripts start",
